--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-appearance": "~0.3.1",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-modal": "^11.5.6",
     "react-native-otp-textinput": "0.0.6",
     "react-native-picker-select": "^6.6.0",
     "react-native-reanimated": "~1.4.0",
